--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,73 @@
-# Ignore everything in build
-build/*
+# Build directory - ignore everything
+build/
 
-# But don't ignore these directories (so we can whitelist files inside them)
-!build/src/
-!build/src/editor/
-!build/src/core/
-!build/src/qml/
-
-# Ignore everything inside those directories by default
-build/src/*
-build/src/editor/*
-build/src/core/*
-build/src/qml/*
-
-# Whitelist the specific binaries
-!build/src/editor/canvasdesk-editor
-!build/src/core/libCanvasDeskCore.so
-!build/src/qml/libCanvasDeskQml.so
-
-# Ignore other common build artifacts
+# CMake generated files
 CMakeCache.txt
 CMakeFiles/
-Makefile
+CMakeScripts/
 cmake_install.cmake
-*.cmake
+Makefile
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps/
+
+# Qt generated files
+*_autogen/
+*.qrc.depends
+*.moc
+moc_*.cpp
+moc_*.h
+qrc_*.cpp
+ui_*.h
+*.rcc
+.qmake.stash
+*.pro.user
+*.pro.user.*
+.qmake.cache
+object_script.*.Debug
+object_script.*.Release
+
+# Qt meta types and QML cache
+meta_types/
+qmltypes/
+.rcc/
+
+# C/C++ build artifacts
 *.o
+*.obj
 *.a
+*.lib
 *.so
+*.so.*
 *.dylib
 *.dll
 *.exe
-.DS_Store
+*.out
+*.app
+
+# User layout - this is user-specific configuration
+layout.json
+
+# Editor and IDE files
 .vscode/
+.idea/
+*.creator
+*.creator.*
 *.user
+*.includes
+*.files
+*.config
+.DS_Store
+*~
+*.swp
+*.swo
+
+# Backup files
+*~
+*.bak
+*.backup
+*.old
+
+# Reference/example code
+no/
